[package]
name = "bip39-solver-gpu"
version = "0.1.0"
authors = ["johncantrell97"]
edition = "2018"

[dependencies]
ocl = "0.19"
hex = "0.4.3"
rayon = "1.3.0"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
opencl3 = "0.6"
